--- a/Lenses.ipynb
+++ b/Lenses.ipynb
@@ -61,7 +61,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -155,15 +157,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Focal Length at 4.5cm: 35.6 +/- 1.7 cm.\n",
-      "Focal Length at 8.0cm: 12.1 +/- 1.7 cm.\n"
+      "Focal Length at 4.5cm: -18.4 +/- 1.7 cm.\n",
+      "Focal Length at 8.0cm: -18.3 +/- 1.7 cm.\n"
      ]
     }
    ],
@@ -176,9 +178,9 @@
     "d1 = 4.5 # cm\n",
     "d2 = 8 # cm\n",
     "\n",
-    "p2_1 = i2_1-d1\n",
+    "p2_1 = -(i1-d1)\n",
     "errp2_1 = rule3(erri,errp)\n",
-    "p2_2 = i2_2-d2\n",
+    "p2_2 = -(i1-d2)\n",
     "errp2_2 = rule3(erri,errp)\n",
     "\n",
     "fd2 = fLen(p2_1,i2_1)\n",
@@ -190,6 +192,13 @@
     "print(\"Focal Length at 4.5cm:\",np.round(fd2,1),\"+/-\",np.round(errfd2,1),\"cm.\")\n",
     "print(\"Focal Length at 8.0cm:\",np.round(fd3,1),\"+/-\",np.round(errfd3,1),\"cm.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
